src/css/upload.css
#sidebar {
  background-color: #52a0bead;
  height: 85vh;
  overflow-y: none;
  box-shadow: -2px 0 5px 4px rgba(2, 27, 46, 18);
  border-radius: 15px;
  padding-top: 5px;
  padding-bottom: 5px;
}

.center-heading {
  text-align: center;
  line-height: 100px; /* Adjust the line height value as needed */
  height: 100px; 
}
.custom-btn {
  background-color: #f5f5f5;
  color: #333;
  border: none;
  padding: 10px 20px;
  font-size: 16px;
  border-radius: 5px;
  margin-bottom: 10px;
}

form label.upload,
form button {
  background-color: #006e31;
  color: white;
  padding: 5px 10px;
  border-radius: 5px;
  font-size: 1.2em;
  width: 75%;
  border: none;
}

form label.upload:hover,
form button:hover {
  background-color: #021b2e;
  color: white;
}

form label.upload:active,
form button:active {
  background-color: #021b2e;
  color: white;
}

.preview {
  margin-top: -2em;
}

li {
  font-weight: bold;
}

#modal {
  border: 1px solid black;
  border-radius: 3px;
  padding-left: -35%;
  padding-right: -35%;
  margin-bottom: 20px;
}

#cy-container {
  position: inherit;
}

#cy {
  width: 75%;
  max-width: 75%;
  height: 100%;
  position: absolute;
  top: 75%;
  left: 25%;
}

